--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "clt",
   "version": "0.0.2",
-  "description": "Easy way to run assertions against CLI tools.",
+  "description": "CLI assertions made easy",
   "main": "main.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --reporter spec"
+    "test": "ava test/*.js"
   },
   "devDependencies": {
+    "ava": "^0.14.0",
     "mocha": "~1.3.0"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
